<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Receta">

    <LinearLayout
        android:id="@+id/cabeceraCrear"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:background="@android:color/holo_blue_dark"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/txtTituloCrear"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="sans-serif-black"
            android:gravity="center"
            android:text="@string/txtTituloCrear"
            android:textColor="@color/white"
            android:textSize="30sp" />
    </LinearLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/NavegadorPerfil"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/material_dynamic_neutral70"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <ImageButton
            android:id="@+id/btnInicio"
            android:layout_width="65dp"
            android:layout_height="65dp"
            android:layout_marginStart="44dp"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:padding="0dp"
            android:scaleType="fitXY"
            android:src="@drawable/inicio"
            app:layout_constraintBottom_toBottomOf="@id/NavegadorPerfil"
            app:layout_constraintStart_toStartOf="@id/NavegadorPerfil"
            app:layout_constraintTop_toTopOf="@id/NavegadorPerfil"
            app:layout_constraintVertical_bias="0.514" />

        <ImageButton
            android:id="@+id/btnCrear"
            android:layout_width="65dp"
            android:layout_height="65dp"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:padding="0dp"
            android:scaleType="fitXY"
            android:src="@drawable/crear"
            app:layout_constraintBottom_toBottomOf="@id/NavegadorPerfil"
            app:layout_constraintEnd_toStartOf="@id/btnPerfil"
            app:layout_constraintStart_toEndOf="@id/btnInicio"
            app:layout_constraintTop_toTopOf="@id/NavegadorPerfil"
            app:layout_constraintVertical_bias="0.0" />

        <ImageButton
            android:id="@+id/btnPerfil"
            android:layout_width="65dp"
            android:layout_height="65dp"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:padding="0dp"
            android:scaleType="fitXY"
            android:src="@drawable/perfil"
            app:layout_constraintBottom_toBottomOf="@id/NavegadorPerfil"
            app:layout_constraintEnd_toEndOf="@id/NavegadorPerfil"
            app:layout_constraintStart_toEndOf="@id/btnCrear"
            app:layout_constraintTop_toTopOf="@id/NavegadorPerfil" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <ScrollView
        android:layout_width="409dp"
        android:layout_height="754dp"
        android:layout_marginStart="1dp"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="1dp"
        android:layout_marginBottom="1dp"
        app:layout_constraintBottom_toTopOf="@+id/NavegadorPerfil"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cabeceraCrear">

        <LinearLayout
            android:id="@+id/contenidoCrear"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/txtTituloReceta"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="10dp"
                android:fontFamily="sans-serif"
                android:text="@string/txtTituloReceta"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/edtxtReceta"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="10dp"
                android:background="@color/material_dynamic_neutral90"
                android:ems="20"
                android:hint="@string/txtHintTitulo"
                android:inputType="text"
                android:textColorHint="@android:color/darker_gray" />

            <TextView
                android:id="@+id/txtTituloIngrediente"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="10dp"
                android:fontFamily="sans-serif"
                android:text="@string/txtIngrediente"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/edtxtIngredientes"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="10dp"
                android:background="@color/material_dynamic_neutral_variant90"
                android:ems="20"
                android:gravity="start|top"
                android:hint="@string/txtHintIngrediente"
                android:inputType="textMultiLine"
                android:textAlignment="viewStart"
                android:textColorHint="@android:color/darker_gray" />

            <TextView
                android:id="@+id/txtTituloInstrucciones"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="10dp"
                android:fontFamily="sans-serif"
                android:text="@string/txtInstrucciones"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/edtxtInstrucciones"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="10dp"
                android:background="@color/material_dynamic_neutral90"
                android:ems="20"
                android:gravity="start|top"
                android:hint="@string/txtHintInstrucciones"
                android:inputType="textMultiLine"
                android:textAlignment="viewStart"
                android:textColorHint="@android:color/darker_gray" />

            <TextView
                android:id="@+id/txtTituloDificultad"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="10dp"
                android:fontFamily="sans-serif"
                android:text="@string/txtDificultadReceta"
                android:textSize="20sp" />

            <RadioGroup
                android:id="@+id/radioDificultad"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="10dp"
                android:layout_marginTop="5dp"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/radioFacil"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Fácil" />

                <RadioButton
                    android:id="@+id/radioMedio"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Medio" />

                <RadioButton
                    android:id="@+id/radioDificil"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Difícil" />
            </RadioGroup>

            <TextView
                android:id="@+id/txtTituloPorciones"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="10dp"
                android:fontFamily="sans-serif"
                android:text="@string/txtTiempoPreparacion"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/edtxtTiempoPreparacion"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="10dp"
                android:background="@color/material_dynamic_neutral90"
                android:ems="20"
                android:hint="@string/txtHintTimepoPreparacion"
                android:inputType="text"
                android:textColorHint="@android:color/darker_gray" />

            <TextView
                android:id="@+id/txtCategoriaReceta"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="10dp"
                android:text="Categoria"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/edtxtCategoria"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="10dp"
                android:background="@color/material_dynamic_neutral90"
                android:ems="20"
                android:hint="@string/txtHintCategoria"
                android:inputType="text"
                android:textColorHint="@android:color/darker_gray" />

            <TextView
                android:id="@+id/txtFavorito"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10sp"
                android:layout_marginTop="5sp"
                android:layout_marginEnd="10sp"
                android:text="@string/txtFavorito"
                android:textSize="20sp"
                tools:fontFamily="sans-serif" />

            <RadioGroup
                android:id="@+id/RadioFavorito"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="10dp"
                android:layout_marginTop="5dp"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/radioButton6"
                    android:layout_width="95dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="Si" />

                <RadioButton
                    android:id="@+id/radioButton7"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="No" />
            </RadioGroup>

            <TextView
                android:id="@+id/txtTituloFoto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="10dp"
                android:fontFamily="sans-serif"
                android:text="@string/txtFoto"
                android:textSize="20sp" />

            <ImageView
                android:id="@+id/imgReceta"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_marginTop="8dp"
                android:src="@drawable/ic_launcher_foreground"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvSubirImagen" />

            <Button
                android:id="@+id/btnSeleccionarImagen"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:backgroundTint="@android:color/holo_blue_dark"
                android:text="@string/btnImgReceta"
                app:icon="@drawable/camera" />

            <Button
                android:id="@+id/btnPostear"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="30dp"
                android:backgroundTint="@android:color/holo_green_light"
                android:fontFamily="sans-serif-black"
                android:gravity="center"
                android:text="@string/btnGuardarReceta"
                android:textSize="20sp" />

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>